--- a/GatorFinder/Frontend/login.html
+++ b/GatorFinder/Frontend/login.html
@@ -26,17 +26,7 @@
             required 
           />
         </div>
-        <div class="form-group">
-          <label for="password">Password</label>
-          <input 
-            type="password" 
-            id="password" 
-            name="password" 
-            placeholder="Enter your password" 
-            required 
-          />
-        </div>
-        <button type="submit">Login</button>
+        <button type="submit">Request OTP</button>
       </form>
       <p>
         Don't have an account? <a href="signup.html">Sign Up</a>
